--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.4.1",
     "react-feather": "^1.1.1",
     "react-loadable": "^5.4.0",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.3",
     "styled-components": "^3.3.3",
     "uuid": "^3.3.2"
   },
@@ -21,5 +21,11 @@
     "eject": "react-scripts eject"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
